--- a/TMS/TMS/Views/Home/Index.cshtml
+++ b/TMS/TMS/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
                 if (ticketList != null)
                 {
                     <div class="box-body no-padding">
-                        @foreach (RequesterTicketViewModel ticket in ticketList)
+                        @foreach (BasicTicketViewModel ticket in ticketList)
                         {
                             <div class="col-sm-12 solved-ticket">
                                 <div class="col-lg-1 col-md-1 col-sm-2">
