--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_TopLayout.cshtml";
 }
-@model TMS.ViewModels.RequesterTicketViewModel
+@model TMS.ViewModels.BasicTicketViewModel
 @{
     ViewBag.Title = "Create ticket";
 }
