--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -140,3 +140,49 @@
 .draggable {
     cursor: move;
 }
+
+.holder {
+    text-align: right;
+}
+
+    .holder a {
+        font-size: 13px;
+        cursor: pointer;
+        color: #458dc2;
+        padding: 5px 15px;
+        border: solid 1px #bfbfbf;
+        border-right: none;
+    }
+
+        .holder a:last-of-type {
+            border-right: solid 1px #bfbfbf;
+        }
+
+        .holder a:hover {
+            color: #fff;
+            background-color: #00A65A;
+        }
+
+        .holder a.jp-current, a.jp-current:hover {
+            color: #fff;
+            background-color: #009651 !important;
+            font-weight: bold;
+        }
+
+        .holder a.jp-disabled, a.jp-disabled:hover {
+            color: #808080;
+            background-color: #e9e8e8 !important;
+        }
+
+        .holder a.jp-current, a.jp-current:hover, .holder a.jp-disabled, a.jp-disabled:hover {
+            cursor: default;
+            background: none;
+        }
+
+    .holder span {
+        font-size: 13px;
+        color: #161616;
+        padding: 5px 15px;
+        border: solid 1px #bfbfbf;
+        border-right: none;
+    }
