--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -345,6 +345,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a id="action-history-btn">
+                                    <i class="fa fa-history" aria-hidden="true"></i> Ticket History
+                                </a>
+                            </li>
+                            <li>
                                 <a id="action-solve-btn">
                                     <i class="fa fa-commenting" aria-hidden="true"></i> Solve Ticket
                                 </a>
