--- a/TMS/TMS/Views/Shared/KBLayout.cshtml
+++ b/TMS/TMS/Views/Shared/KBLayout.cshtml
@@ -48,8 +48,8 @@
         <div class="search-area container">
             <h3 class="search-header">Have a Question?</h3>
             <p class="search-tag-line">If you have any question you can ask below or enter what you are looking for!</p>
-            <form id="search-form" class="search-form clearfix" action="@Url.Action("Index", "FAQ")" method="GET">
-                <input class="search-term required" type="text" name="SearchKey" id="search-solution" placeholder="Type your search terms here" />
+            <form class="search-form clearfix" action="/FAQ/Index" method="GET">
+                <input class="search-term required" name="search" type="text" id="search-solution" placeholder="Type your search terms here" />
                 <input class="search-btn" id="btn-search-solution" type="submit" value="Search" />
                 <div id="search-error-container"></div>
             </form>
